[package]
name = "f1-led-circuit-master-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7.11"
futures = "0.3.30"
futures-util = "0.3.30"
async-stream = "0.3.5"
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.25.0"
egui_plot = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.10"
bytes = "1.6.0"
rand = "0.8.5"
log = "0.4"
csv = "1.1"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2